--- a/doc/titlepage.tex
+++ b/doc/titlepage.tex
@@ -19,7 +19,8 @@ Projekt do předmětu PGR -- Počítačová grafika
 
 \begin{center}
 \begin{Huge}
-Název projektu \\
+Generování textury\\
+impostor stromu
 \end{Huge}
 \end{center}
 
@@ -37,10 +38,11 @@ Název projektu \\
 \begin{large}
 \begin{tabular}{ll}
 
-\bf Řešitelé:\hspace{3mm} & Jméno Příjmení (\verb_xlogin00@stud.fit.vutbr.cz_) \\
-& Jméno Příjmení (\verb_xlogin00@stud.fit.vutbr.cz_) \\
-& Jméno Příjmení (\verb_xlogin00@stud.fit.vutbr.cz_) \\
-& Fakulta Informačních Technologií \\
+\bf Řešitelé:\hspace{3mm} & Bc. Jan Kaláb (\verb_xkalab00@stud.fit.vutbr.cz_)\\
+& Bc. Tomáš Kubík (\verb_xkubik15@stud.fit.vutbr.cz_)\\
+& Bc. Jan Lipovský (\verb_xlipov00@stud.fit.vutbr.cz_)\\
+& Bc. František Skála (\verb_xskala05@stud.fit.vutbr.cz_)\\
+& Fakulta Informačních Technologií\\
 & Vysoké Učení Technické v~Brně
 
 \end{tabular}
