--- a/doc/pgr.tex
+++ b/doc/pgr.tex
@@ -16,21 +16,33 @@ Rozsah: cca 10 odrážek
 %---------------------------------------------------------------------------
 \section{Použité technologie}
 
-Zde vypište, jaké technologie vaše řešení používá – co potřebuje k běhu, co
-jste použili při tvorbě, atd. Text strukturujte, použijte odrážky,
-číslování$\ldots$
+%Zde vypište, jaké technologie vaše řešení používá – co potřebuje k běhu, co
+%jste použili při tvorbě, atd. Text strukturujte, použijte odrážky,
+%číslování$\ldots$
+%
+%Rozsah: cca 7 odrážek
 
-Rozsah: cca 7 odrážek
+\begin{itemize}
+\item SDL
+\item L-systémy
+\item Bresenhamův algoritmus kreslení úseček
+\item Git
+\item OpenGL
+\end{itemize}
 
 %---------------------------------------------------------------------------
 \section{Použité zdroje}
 
-Zde vypište, které zdroje jste použili k tvorbě: hotový kód, hotová data
-(obrázky, modely, $\ldots$), studijní materiály. Pokud vyplyne, že v projektu
-je použit kód nebo data, která nejsou uvedena tady, jedná se o závažný problém
-a projekt bude pravděpodobně hodnocen 0 body.
+%Zde vypište, které zdroje jste použili k tvorbě: hotový kód, hotová data
+%(obrázky, modely, $\ldots$), studijní materiály. Pokud vyplyne, že v projektu
+%je použit kód nebo data, která nejsou uvedena tady, jedná se o závažný problém
+%a projekt bude pravděpodobně hodnocen 0 body.
+%
+%Rozsah: potřebný počet odrážek
 
-Rozsah: potřebný počet odrážek
+\begin{itemize}
+\item TUREK, Michal. Seriál SDL : Hry nejen pro Linux. Root.cz [online]. 2005, [cit. 2010-12-05]. Dostupný z WWW: <http://www.root.cz/serialy/sdl-hry-nejen-pro-linux/>.
+\end{itemize}
 
 %---------------------------------------------------------------------------
 \section{Nejdůležitější dosažené výsledky}
@@ -59,15 +71,22 @@ Rozsah: podle potřeby
 %---------------------------------------------------------------------------
 \section{Rozdělení práce v týmu}
 
-\begin{itemize}
-\item Franta: udělal tohle, udělal tableto, ještě taky toto, vedl tým.
-\item Pepa: pracoval na tom, na tomhle a ještě na tomto.
-\item Mařenka: vytvořila tohle, tamto a ještě něco.
-\end{itemize}
-Pokud to bude vhodné, použijte odrážky místo souvislých vět.
+%\begin{itemize}
+%\item Franta: udělal tohle, udělal tableto, ještě taky toto, vedl tým.
+%\item Pepa: pracoval na tom, na tomhle a ještě na tomto.
+%\item Mařenka: vytvořila tohle, tamto a ještě něco.
+%\end{itemize}
+%Pokud to bude vhodné, použijte odrážky místo souvislých vět.
+%
+%Rozsah: co nejstručnější tak, aby bylo zřejmé, jak byla dělena práce a za co v
+%projektu je kdo zodpovědný.
 
-Rozsah: co nejstručnější tak, aby bylo zřejmé, jak byla dělena práce a za co v
-projektu je kdo zodpovědný.
+\begin{itemize}
+\item Bc. Jan Kaláb: rasterizace.
+\item Bc. Tomáš Kubík: L-systémy.
+\item Bc. Jan Lipovský: demo.
+\item Bc. František Skála: parametrizace.
+\end{itemize}
 
 %---------------------------------------------------------------------------
 \section{Co bylo nejpracnější}
