Zobaky kolem linku

--- a/doc/pgr.tex
+++ b/doc/pgr.tex
@@ -50,7 +50,7 @@
 %Rozsah: potřebný počet odrážek
 
 \begin{itemize}
-\item TUREK, Michal. Seriál SDL : Hry nejen pro Linux. Root.cz [online]. 2005, [cit. 2010-12-05]. Dostupný z WWW: <http://www.root.cz/serialy/sdl-hry-nejen-pro-linux/>.
+\item TUREK, Michal. Seriál SDL : Hry nejen pro Linux. Root.cz [online]. 2005, [cit. 2010-12-05]. Dostupný z WWW: {\textless}http://www.root.cz/serialy/sdl-hry-nejen-pro-linux/{\textgreater}.
 \end{itemize}
 
 %---------------------------------------------------------------------------
