--- a/doc/pgr.tex
+++ b/doc/pgr.tex
@@ -75,18 +75,20 @@
 %tak děje.
 %
 %Rozsah: potřebný počet odrážek
+
 \subsection{Demo aplikace - užití v praxi}
 \begin{itemize}
 \item Jedná se o využití textury v 3D prostoru pomocí billboardingu
 \item Rozhlížení pohybem myši
 \item Pohyb pomocí kláves W, S, A, D
 \end{itemize}
+
 \subsection{Aplikace pro parametrizaci stromu}
 \begin{itemize}
 \item Jedná se o klasickou okenní aplikaci
 \item Uživatel si zde může naklikat jednotlivé parametry stromu (typ, detail apod.)
 \item Po nastavení parametrů je vygenerován odpovídající obrázek
-\end
+\end{itemize}
 %---------------------------------------------------------------------------
 \section{Zvláštní použité znalosti}
 
